# innate-feeds

./: .env.example  .gitignore  AGENTS.md  API.md  COMPLETE_SUMMARY.md  DATA_REFRESH_SOLUTION.md  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION.md  MERGE_SUMMARY.md  README.md  SPEC.md  TASK1_SUMMARY.md  TASK2_SUMMARY.md  build.sh  deploy.sh  desktop.sh  docker-compose.yml  plan.md  setup.sh  test.sh
.github/workflows/: collect-starred.yml
awesome-to-sites/codex-skills-site/: package-lock.json  package.json
backend/: go.mod  main.go
backend/pb_migrations/: 1700000000_starred_repos.js  1700000001_collection_configs.js  1700000002_trending_repos.js
data/: trending_monthly.json
frontend/: next.config.js  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
innate-hub/: .env.example  README.md  docker-compose.yml  docker-start.sh  start.sh
innate-hub/backend/: Dockerfile  go.mod  go.sum
innate-hub/docs/: planning.md
kimi-trending/: plan.md
kimi-trending/trending-backend/: .env.example  Dockerfile  go.mod
kimi-trending/trending-desktop/: README.md
kimi-trending/trending-desktop/src-tauri/: Cargo.toml
kimi-trending/trending-desktop/src-tauri/capabilities/: default.json
kimi-trending/trending-desktop/src-tauri/src/: main.rs
kimi-trending/trending-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
tasks/: github-starred.md
tasks/tracing/: github-starred.md
trending-backend/: Makefile  README.md  go.mod
trending-web/: README.md
trending-web/src/: App.tsx
(+165 files in other folders)
