[package]
name = "innate-feeds"
version = "0.1.0"
description = "GitHub Starred Repositories Desktop Viewer"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "innate_feeds_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
