[package]
name = "trending-aggregator"
version = "1.0.0"
description = "Trending Aggregator - GitHub and Product Hunt trends"
authors = ["Trending Aggregator Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "shell-open"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "sync"] }
